--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,17 @@
-name : Playwright Tests
+name: Playwright Tests
+
 on:
-    push:
-        branches: [ main ]
+  push:
+    branches:
+      - main
+
 jobs:
-        playwrighttests:
-            runs-on: ubuntu-latest
-            steps:
-                - name: Checkout repository
-                 uses: actions/checkout@v2
-                - name: Say hello
-                 run: echo Hello
-                
-                
+  playwrighttests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Say hello
+        run: echo Hello
